# babylon_oracle

./: .gitignore  .pylintrc  README.md  bao.hcl  pyproject.toml  run_server.py  start_open_bao.sh  stop_bao.sh  tox.ini
.gemeni/: README.md  commands.yaml  config.yaml  fix-gh-action.md  mcp-client-setup.md  mcp-server-setup.md  prompts.yaml
.github/workflows/: babylon-features.yml  babylon-mcp-client.yml  babylon-mcp-server.yml
api_spec/: _api.yml
client/: README.md  package-lock.json  package.json  server.js  webpack.config.js
client/public/: bundle.js  index.html
client/src/: App.js  App.test.js  Chatbot.js  Login.js
oracle_server/: app.py  conversation_memory.py  error.py  health.py  logger.py  mcp_handler.py  mcp_server.py  vectorstore.py
oracle_server/config/: config.py  configuration_loaders.py  hashicorp.py
oracle_server/controllers/: chat.py  echo.py
oracle_server/handlers/: __init__.py  handler.py
oracle_server/tools/: calculator.py  weather.py
tests/: conftest.py  test_configuration_loaders.py  test_mcp_server.py  test_secrets_manager.py.bak
tests/config/: test_secrets_manager.py
tests/controllers/: test_chat.py  test_echo.py
tests/handlers/: test_handler.py
