[tool.poetry]
name = "oracle_server"
version = "0.1.0"
description = "Babylon MCP Integration"
authors = ["Alan Ponte <alanjponte@gmail.com>"]
readme = "README.md"
#packages = [{ include = "your_package_name" }]  # or remove if not using a package dir

[tool.poetry.dependencies]
python = "^3.13"

# Web server
connexion = { version = "^3.2.0", extras = ["flask", "swagger-ui", "uvicorn"] }
#Flask = "^3.1.2"
requests = "^2.32.5"

# Secrets manager
hvac = "2.3.0"
Flask-Cors = "^4.0.1"
pydantic = "^2.12.3"

[tool.poetry.group.test.dependencies]
black = "25.1.0"
mypy = "^1.17.1"
pylint = "3.3.7"
pytest="^8.4.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
