[tool.poetry]
name = "oracle_server"
version = "0.1.0"
description = "Babylon MCP Integration"
authors = ["Alan Ponte <alanjponte@gmail.com>"]
readme = "README.md"
#packages = [{ include = "your_package_name" }]  # or remove if not using a package dir

[tool.poetry.dependencies]
python = "^3.13"

# Web server
connexion = { version = "^3.2.0", extras = ["flask", "swagger-ui", "uvicorn"] }
#Flask = "^3.1.2"
requests = "^2.32.5"

# Secrets manager
hvac = "2.3.0"
Flask-Cors = "^4.0.1"
pydantic = "^2.12.3"
python-dotenv = "^1.1.1"

[tool.poetry.group.test.dependencies]
pytest="^8.4.1"

[tool.poetry.group.lint.dependencies]
pylint = "3.3.7"

[tool.poetry.group.format.dependencies]
black = "25.1.0"

[tool.poetry.group.typecheck.dependencies]
mypy = "^1.17.1"


[build-system]
requires = ["poetry-core>=1.0.0", "tox-poetry", "poetry"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:jsonschema.RefResolver is deprecated:DeprecationWarning",
    "ignore:jsonschema.exceptions.RefResolutionError is deprecated:DeprecationWarning",
]